# eegg

./: .gitignore  Modelfile  README.md  main.py  pyproject.toml
paper/: main.typ  zotero.bib
